@@ -59,6 +59,10 @@ vc-ssl-dll:
 	cd ..\src
 	nmake -f Makefile.vc6
 
+djgpp:
+	make -C lib -f Makefile.dj
+	make -C src -f Makefile.dj
+
 cygwin:
 	./configure
 	make
